--- a/assets/styles/card.scss
+++ b/assets/styles/card.scss
@@ -42,7 +42,7 @@ $fond :#fffdf0;
         background-color: $pastel;
         border-radius: 15px;
         text-align: left;
-        font-family: 'Karla', sans-serif;
+        font-family: 'Raleway', sans-serif;
         font-weight: bold;
         position: relative;
         outline: none;
