--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -10,22 +10,21 @@
 
 {% block body %}
     <h1>Comment donner ?</h1>
-    <div class="illustrated"><p class="pageTitle"><img class="illustrationLeft" src={{ asset ('img/salleDattente.PNG')}}>Pour faire un don de sang de cordon, les démarches sont simples et rapides. Si vous souhaitez vous inscrire, vous trouverez ci-joint les étapes à suivre pour réaliser ce don, ainsi que les explications relatives au prélèvement. Veuillez tenir compte des conditions indiquées pour effectuer un don.</p></div>
+    <p>Voici les étapes à suivre afin de vous inscrire dans une démarche de don de sang de cordon pour un usage scientifique.</p>
     <div class="bulle"><h2>Avant l’accouchement</h2></div>
     <p>Pour pouvoir donner votre sang de cordon pour un usage scientifique, voici les étapes à suivre afin de pouvoir vous inscrire dans cette démarche.</p>
     <div class="reseau">
         <div id="deroullantMaternité">
             <button class="accordion"><p class="accordionTitle">1.	Maternités partenaire de notre réseau</p></button>
             <div class="panel">
-                <p>Adressez-vous à l’une des maternités partenaire de notre réseau, vous serez mise en relation avec une sage-femme qui pourra répondre à toutes vos questions et préoccupations. </p>  
+                <p>Adressez-vous à l’une des maternités partenaire de notre réseau, vous serez mise en relation avec une sage-femme qui pourra répondre à toutes vos questions et préoccupations, à l’occasion de l’un des rendez-vous de suivi de votre grossesse.</p>  
             </div>
         </div>
         <a href="/Ou" target="_blank" rel="noopener noreferrer"><button id="reseau">Découvrir notre Réseau</button></a>
     </div>
     <button id="btn2" class="accordion"><p class="accordionTitle">2.	Documents fournis lors du RDV à la maternité</p></button>
     <div class="panel">
-        <p>Lors de votre rendez-vous dans votre maternité, une sage-femme vous fournira une <a href="" target="_blank" rel="noopener noreferrer">lettre d’information</a>, qu’il s’agisse d’un don pour usage thérapeutique ou scientifique ; afin de vous renseigner au maximum sur ce don. 
-        Le <a href="" target="_blank" rel="noopener noreferrer">formulaire de consentement</a> vous sera fourni en trois exemplaires : pour la maternité, l’EFS et vous-même. 
+        <p>Lors d’un rendez-vous à votre maternité, votre sage-femme vous remettra une <a href="" target="_blank" rel="noopener noreferrer">lettre d’information</a>, ainsi qu’un <a href="" target="_blank" rel="noopener noreferrer">formulaire de consentement</a>, fourni en trois exemplaires et répondra à toutes vos questions.
         </p>
     </div>
     <button class="accordion"><p class="accordionTitle">3.	Documents signés et complétés</p></button>
