--- a/assets/styles/accordeon.scss
+++ b/assets/styles/accordeon.scss
@@ -17,7 +17,7 @@ $fond :#fffdf0;
     border-right:solid 3px black;
     box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.1);
     border-radius: 0 15px 0 0 ;
-    font-family: 'Karla', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: bold;
     position: relative;
     overflow: hidden;
