--- a/assets/styles/comment.scss
+++ b/assets/styles/comment.scss
@@ -67,7 +67,7 @@ $fond :#fffdf0;
     padding: 0 0.5em;
     background-color: $pastel;
     border-radius: 15px;
-    font-family: 'Karla', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: bold;
     outline: none;
     cursor: pointer;
