--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -25,7 +25,7 @@ body{
 }
 
 h1{
-  font-family: 'Karla', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 2.5em;
   margin-bottom: 1.5em;
   margin-top: 1em;
@@ -42,7 +42,7 @@ h1{
   position: relative;
   .logTitle{
     h2{
-      font-family: 'Karla', sans-serif;
+      font-family: 'Raleway', sans-serif;
       font-size: 2.5em;
       margin-top: 1em;
       font-weight: bold;
@@ -57,7 +57,7 @@ h1{
     justify-content: space-between;
     .input {
       position: relative;
-      font-family: 'Hind Siliguri', sans-serif;
+      font-family: 'Raleway', sans-serif;
       margin: 1em 0;
     
       &__label {
