--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -10,7 +10,7 @@
 
 {% block body %}
     <h1>Qu'est-ce que le don de sang de cordon ?</h1>
-    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée de « sang placentaire »), il s’agit du sang se trouvant dans le cordon ombilical. Ce sang est particulièrement riche en <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    <p class="pageTitle columnsText">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée de « sang placentaire »), il s’agit du sang se trouvant dans le cordon ombilical. Ce sang est particulièrement riche en <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
     -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
     -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
@@ -210,7 +210,7 @@
         </div>
     </div>
     <h1>Quel usage pour ce don ?</h1>
-    <p>Les cellules de sang de cordon sont des cellules précieuses pour la recherche. Elles peuvent faire avancer la recherche biomédicale, notamment dans les domaines de l’infectiologie, l’immunologie, l’hématologie, l’oncologie et de la thérapie cellulaire. Elles permettent également de contribuer à la recherche pour des traitements innovants.</p>
+    <p class="columnsText">Les cellules de sang de cordon sont des cellules précieuses pour la recherche. Elles peuvent faire avancer la recherche biomédicale, notamment dans les domaines de l’infectiologie, l’immunologie, l’hématologie, l’oncologie et de la thérapie cellulaire. Elles permettent également de contribuer à la recherche pour des traitements innovants.</p>
     <h2 id="cardsRechercheTitle">Recherches appliquées :</h2>
     <div class="cardRecherche">
         <div class="card">
