--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -13,7 +13,7 @@
     <h1>Pourquoi donner ?</h1>
     <button class="accordion"><p class="accordionTitle">1.  Sauver des vies</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p>La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.
+        <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p class="columnsText">La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.
         <br><br>
         Ainsi, faire un don de sang de cordon à usage thérapeutique, au sein des maternités du Réseau des banques de Sang Placentaire, c’est redonner de l’espoir aux personnes atteintes de maladies graves. On compte environ 2000 personnes qui, chaque année, ont besoin d’une greffe de cellules souches hématopoïétiques en France.
         <br><br>        
@@ -23,7 +23,7 @@
 
     <button class="accordion"><p class="accordionTitle">2.	Aider la recherche</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p>Le don de sang de cordon à usage scientifique mais aussi de cordon ombilical ou de placenta permet d’isoler diverses cellules qui ne peuvent pas (ou très difficilement) être prélevées sur des donneurs adultes ou qui présentent des caractéristiques uniques, différentes de celles des cellules adultes, ce qui les rend précieuses pour la recherche.
+        <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p class="columnsText">Le don de sang de cordon à usage scientifique mais aussi de cordon ombilical ou de placenta permet d’isoler diverses cellules qui ne peuvent pas (ou très difficilement) être prélevées sur des donneurs adultes ou qui présentent des caractéristiques uniques, différentes de celles des cellules adultes, ce qui les rend précieuses pour la recherche.
         <br><br>
         Elles sont utilisées pour développer des traitements innovants du cancer ou de maladies auto-immunes ou des <span class="tooltip">thérapies <span class="tooltipText">Utilisation de cellules comme médicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple).</span></span> <span class="tooltip">cellulaires <span class="tooltipText">Utilisation de cellules comme médicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple).</span></span> <span class="tooltip">régénératrices <span class="tooltipText">Utilisation de cellules comme médicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple).</span></span>. Elles peuvent également être employées dans des tests in vitro dans le cadre du développement de médicaments plus classiques ou pour tester des vaccins.
         Ainsi, faire un don de sang de cordon à usage scientifique, c’est aider la recherche.</p>
@@ -31,17 +31,17 @@
 
     <button class="accordion"><p class="accordionTitle">3.	Un acte responsable et solidaire</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p>L’acte de donner son sang de cordon est un acte citoyen, généreux, solidaire, et important qui peut aider de nombreux patients. Cette expérience riche s’inscrit dans une dynamique de partage tant pour la donneuse que pour les patients. </p>
+        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p class="columnsText">L’acte de donner son sang de cordon est un acte citoyen, généreux, solidaire, et important qui peut aider de nombreux patients. Cette expérience riche s’inscrit dans une dynamique de partage tant pour la donneuse que pour les patients. </p>
     </div>
 
     <h1>Les principes du don de sang de cordon</h1>
     <div class="bulle">
         <h2>Un acte libre</h2>
-        <p>Vous êtes libre de donner ou non votre sang de cordon.
+        <p class="columnsText">Vous êtes libre de donner ou non votre sang de cordon.
         <br><br>
         Avant la réalisation du recueil,votre consentement au prélèvement vous sera demandé, par signature d’un <a href="">document de consentement</a>. Cependant, vous pouvez retirer à tout moment votre consentement auprès de votre maternité, sans aucune justification de votre part. Cela ne changera en rien votre prise en charge médicale ni celle de votre enfant et n’affectera pas vos relations avec l’équipe soignante de votre maternité.
-        Après la réalisation du recueil, si vous souhaitez demander la destruction des produits en stock conservés par Lymphobank, aucune justification ne vous sera demandée. Pour ce faire, il vous suffit de vous adresser à l’Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC), à l’adresse ci-dessous. L’EFS-BFC transmettra votre requête à Lymphobank qui vous transmettra alors, via l’EFS-BFC qui transmettra votre requête à Lymphobank. Lymphobank vous transmettra alors, via l’Etablissement Français du Sang Bourgogne/Franche-Comté, un certificat de destruction. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à Lymphobank qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. En revanche, il n’est plus possible de réaliser la destruction des produits après que ceux-ci aient été cédés par Lymphobank à un laboratoire de recherche.
-        <br><br>
+        Après la réalisation du recueil, si vous souhaitez demander la destruction des produits en stock conservés par Lymphobank, aucune justification ne vous sera demandée. Pour ce faire, il vous suffit de vous adresser à l’Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC), à l’adresse ci-dessous. L’EFS-BFC transmettra votre requête à Lymphobank qui vous transmettra alors, via l’EFS-BFC qui transmettra votre requête à Lymphobank. Lymphobank vous transmettra alors, via l’Etablissement Français du Sang Bourgogne/Franche-Comté, un certificat de destruction. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à Lymphobank qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. En revanche, il n’est plus possible de réaliser la destruction des produits après que ceux-ci aient été cédés par Lymphobank à un laboratoire de recherche.</p><p>
+        <br>
         Banque de Sang Placentaire
         <br>
         Etablissement Français du Sang Bourgogne/Franche-Comté(EFS-BFS)
@@ -53,11 +53,11 @@
         Tel : 03 81 615 675
         </p>
         <h2>Un acte anonyme</h2>
-        <p>Le recueil est anonymisé par la Banque de Sang Placentaire de l’Etablissement Français du Sang Bourgogne/Franche-Comté avant d’être cédé à Lymphobank. Ainsi, Lymphobank n’a en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant, qu’il s’agisse de données directement identifiantes (nom, prénom, coordonnées…) ou indirectement identifiantes (date de naissance, sexe, groupe sanguin…)</p>
+        <p class="columnsText">Le recueil est anonymisé par la Banque de Sang Placentaire de l’Etablissement Français du Sang Bourgogne/Franche-Comté avant d’être cédé à Lymphobank. Ainsi, Lymphobank n’a en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant, qu’il s’agisse de données directement identifiantes (nom, prénom, coordonnées…) ou indirectement identifiantes (date de naissance, sexe, groupe sanguin…)</p>
         <h2>Un acte volontaire et gratuit </h2>
-        <p>Le don de sang de cordon est volontaire : aucune indemnité ni compensation n’est versée à la maman. Il est également gratuit : aucun frais lié au prélèvement du sang de cordon ou au recueil du cordon ombilical ou du placenta ne sera à la charge de la mère.</p>
+        <p class="columnsText">Le don de sang de cordon est volontaire : aucune indemnité ni compensation n’est versée à la maman. Il est également gratuit : aucun frais lié au prélèvement du sang de cordon ou au recueil du cordon ombilical ou du placenta ne sera à la charge de la mère.</p>
         <h2>Un acte éthique</h2>
-        <p>Conformément à notre Charte d’engagement (lien), les bénéfices liés à la vente de produits issus de votre don seront totalement réinvestis dans le projet de recherche mené par Lymphobank et sans aucun profit personnel tel que versement de dividendes au fondateur, associés, investisseurs ou partenaires financiers de la société Lymphobank. 
+        <p class="columnsText">Conformément à notre Charte d’engagement (lien), les bénéfices liés à la vente de produits issus de votre don seront totalement réinvestis dans le projet de recherche mené par Lymphobank et sans aucun profit personnel tel que versement de dividendes au fondateur, associés, investisseurs ou partenaires financiers de la société Lymphobank. 
         <br><br>
         Respectueux de votre don, nous exerçons notre activité en toute transparence et sous le contrôle d’un Comité de Surveillance, constitué pour partie du Directeur de l’EFS-BFC, du Président de la Fédération Fran-çaise pour le Don de Sang Bénévole, d’un représentant de votre maternité disposant tous d’un accès aux résultats comptables et financiers de la société et pour validation du respect de nos engagements.
         <br><br>
