--- a/templates/pages/ou.html.twig
+++ b/templates/pages/ou.html.twig
@@ -24,6 +24,7 @@
         <h2>{{etablissement.nom}}</h2>
         <div class="coordonnees">
         <p>{{etablissement.adresse}}, {{etablissement.ville}}, {{etablissement.codePostal}}</p>
+        <p>{{etablissement.num}}</p>
         </div>
     {% endfor %}
     </div>
