resize btn accordeon

--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -22,7 +22,7 @@
         </div>
         <a href="/Ou" target="_blank" rel="noopener noreferrer"><button id="reseau">Découvrir notre Réseau</button></a>
     </div>
-    <button id="btn2" class="accordion"><p class="accordionTitle">2.	Documents fournis lors du RDV à la maternité</p></button>
+    <button id="btn2" class="accordion"><p class="accordionTitle">2.	Documents fournis lors du RDV <br> à la maternité</p></button>
     <div class="panel">
         <p>Lors d’un rendez-vous à votre maternité, votre sage-femme vous remettra une <a href="" target="_blank" rel="noopener noreferrer">lettre d’information</a>, ainsi qu’un <a href="" target="_blank" rel="noopener noreferrer">formulaire de consentement</a>, fourni en trois exemplaires et répondra à toutes vos questions.
         </p>
