ajout couleur variable

--- a/assets/styles/faq.scss
+++ b/assets/styles/faq.scss
@@ -1,3 +1,9 @@
+$pastel : #cec0d6;
+$pastelHover : #52067a;
+$fond :rgb(255, 248, 219);
+$kaki: rgb(180, 139, 10);
+
+
 .cadre{
     border-top: none;
 }
