--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -1,6 +1,7 @@
 $pastel : #cec0d6;
-$pastelHover : #b499c3;
-$fond :#fffdf0;
+$pastelHover : #52067a;
+$fond :rgb(255, 248, 219);
+$kaki: rgb(180, 139, 10);
 
 *, ::before, ::after{
   margin: 0;
