--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -191,17 +191,31 @@
                 <div class="schemaCard">
                     <div class="schemaDonSteep1">
                         <div class="doubleFleche">
-                            <i id="sangFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
-                            <i id="cordonFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
+                            <i class="fas fa-long-arrow-alt-right fa-4x flecheGauche"></i>
+                            <i class="fas fa-long-arrow-alt-right fa-4x flecheDroite"></i>
                         </div>
                         <div class="sangCordon">
                             <div class="sangSteep1">
                                 <h2>Sang de cordon</h2>
                                 <img id="pocheIcon" class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                                <div class="tripleFleche">
+                                    <i class="fas fa-long-arrow-alt-right fa-4x flecheGauche"></i>
+                                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                                    <i class="fas fa-long-arrow-alt-right fa-4x flecheDroite"></i>
+                                </div>
+                                <div class="sangSteep2">
+                                    <h2>Sang de cordon</h2>
+                                    <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
+                                    <img class="icon" src={{ asset ('img/icons/serum.svg')}}>
+                                </div>
                             </div>
                             <div class="cordonSteep1">
                                 <h2>Cordon ombilical</h2>
                                 <img id="cordonIcon" class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>
+                                <div class="doubleFleche">
+                                    <i class="fas fa-long-arrow-alt-right fa-4x flecheGauche"></i>
+                                    <i class="fas fa-long-arrow-alt-right fa-4x flecheDroite"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
