--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -96,34 +96,33 @@
     </div>
     <div class="bulle"><h2>Après l’accouchement</h2></div>
     <p>Votre bébé et vous-même êtes pris en charge par l’équipe médicale. En ce qui concerne votre don, voici son devenir : </p>
-        <div class="schemaDevenir">
-            <div class="devenir">
-                <img class="icon" src={{ asset ('img/icons/centre-medical.png')}}>
-                <h2>Prélèvement réalisé dans la maternité</h2>
-            </div>
-            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="devenir">
-                <img class="icon" src={{ asset ('img/icons/delivery-truck.svg')}}>
-                <h2>Transfert sous 24h à l'EFS-BFC</h2>
-            </div>
-            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="devenir">
-                <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
-                <h2>Anonymisation et qualification du don</h2>
-            </div>
-            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="devenir">
-                <img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
-                <h2>Test de conformité de la maman</h2>
-            </div>
-            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="devenir">
-                <img id="LogoIcon" class="icon" src={{ asset ('img/icons/LogoLymphobank.png')}}>
-                <h2>Valorisation du don pour la recherche</h2>
-            </div>
+    <div class="schemaDevenir">
+        <div class="devenir">
+            <img class="icon" src={{ asset ('img/icons/delivery-truck.svg')}}>
+            <h2>Transfert sous 24h à l'EFS-BFC</h2>
         </div>
-    <p>Si vous souhaitez connaître le devenir de votre don, vous pouvez contacter l’EFS-BFC au 03 81 615 675 qui transmettra votre demande à Lymphobank. </p>
-    
+        <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+        <div class="devenir">
+            <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
+            <h2>Anonymisation et qualification du don</h2>
+        </div>
+        <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+        <div class="devenir">
+            <img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
+            <h2>Test de conformité de la maman</h2>
+        </div>
+        <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+        <div class="devenir">
+            <img id="LogoIcon" class="icon" src={{ asset ('img/icons/LogoLymphobank.png')}}>
+            <h2>Valorisation du don pour la recherche</h2>
+        </div>
+        <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+        <div class="devenir">
+            <img id="LogoIcon" class="icon" src={{ asset ('img/icons/laboratory.svg')}}>
+            <h2>Cession aux laboratoires de recherche</h2>
+        </div>
+    </div>
+
     
 
 {% endblock %}
