--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -137,7 +137,11 @@ $kaki: rgb(180, 139, 10);
 }
 
 .prodSang{
-    margin-top: 5em;
+    margin-top: 3em;
+}
+
+.listeUsage{
+    margin-left: 2em;
 }
 
 
