--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -36,13 +36,12 @@
     <div class="bulle"><h2>Lors de l’accouchement :</h2></div>
     <div class="cardsConditions">
         <div class="card">
-            <div class="card-title"><h2>Conditions pour lesquelles le prélèvement a lieu :</h2></div>
+            <div class="card-title"><h2>Conditions requises pour le don :</h2></div>
             <div class="contentCard">
                 <ul>
                     <li>Avoir au moins 18 ans</li>
                     <li>Accouchement à 37 semaines d’aménorrhées minimum</li>
                     <li>Accouchement par voie basse</li>
-                    <li>Une fois que le cordon ombilical est coupé</li>
                 </ul>
             </div>
         </div>
@@ -50,11 +49,9 @@
             <div class="card-title"><h2>Conditions pour lesquelles le prélèvement ne peut avoir lieu :</h2></div>
             <div class="contentCard">
                 <ul>
+                    <li>Toute situation considérée par l’équipe médicale comme pouvant présenter potentiellement un risque direct ou indirect pour la maman ou pour l’enfant </li>
                     <li>Accouchement prématuré</li>
-                    <li>Accouchement par césarienne programmée ou non programmée (en urgence)</li>
-                    <li>Toute situation considérée par l’équipe médicale pouvant présenter potentiellement un risque direct ou indirect pour la maman ou pour l’enfant.
-                    <li>Toute autre cause rendant impossible le prélèvement (Ex : l’équipe n’a pas le temps de réaliser le prélèvement à cause du nombre élevé d’accouchement le même jour)</li> 
-                    </li>
+                    <li>Accouchement par césarienne, programmée ou non programmée (en urgence)</li> 
                 </ul>
             </div>
         </div>
@@ -81,7 +78,7 @@
         <div class="etape">
             <div class="tooltipGeant">
                 <div class="iconSchema"><h2 class="nb">3.</h2><img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
-                <h2>Une aiguille est insérée dans la veine ombilicale</h2></div>
+                <h2>Prélèvement de sang dans la veine ombilicale</h2></div>
                 <span class="tooltipGeantText">Une sage-femme réalise le prélèvement de sang de cordon par ponction dans la veine du cordon ombilical, pendant que le placenta est encore en place.
                 </span>
             </div>
@@ -89,13 +86,16 @@
             <div class="tooltipGeant">
                 <div class="iconSchema"><h2 class="nb">4.</h2><img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
                 <h2>Le sang est recueilli par gravité dans la poche pendant 2 à 4 minnutes</h2></div>
-                <span class="tooltipGeantText">Le prélèvement de sang de cordon se déroulera dans les quelques minutes qui suivent l’accouchement et durera moins de 5 minutes. C’est une procédure simple, rapide, indolore et sans danger pour l’enfant comme pour la mère. Le cordon et/ou le placenta peuvent éventuellement être recueillis pour un usage scientifique, après que le placenta ait été expulsé.
+                <span class="tooltipGeantText">Le prélèvement de sang de cordon se déroulera dans les quelques minutes qui suivent l’accouchement et durera moins de 5 minutes. Le cordon et/ou le placenta peuvent éventuellement être recueillis pour un usage scientifique, après que le placenta ait été expulsé.
                 </span>
             </div>
         </div>
     </div>
     <div class="bulle"><h2>Après l’accouchement</h2></div>
-    <p>Votre bébé et vous-même êtes pris en charge par l’équipe médicale. En ce qui concerne votre don, voici son devenir : </p>
+    <p>En priorité, votre bébé et vous-même êtes pris en charge par l’équipe médicale. 
+    <br>
+    Voici le devenir de votre don : 
+    </p>
     <div class="schemaDevenir">
         <div class="devenir">
             <img class="icon" src={{ asset ('img/icons/delivery-truck.svg')}}>
