--- a/assets/styles/cardActu.scss
+++ b/assets/styles/cardActu.scss
@@ -58,13 +58,14 @@ $kaki: rgb(180, 139, 10);
         .titreActu{
             text-align: center;
             font-size: 1em;
-            margin-bottom: 0.5em;
+            margin-bottom: 0.1em;
             margin-top: 0.25em;
         }
         .sousTitre{
             text-align: center;
             font-weight: 500;
             font-size: 1em;
+            font-weight: bold;
         }
     }
 }
