--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -10,27 +10,30 @@
 
 {% block body %}
     <h1>Qu'est-ce que le don de sang de cordon ?</h1>
-    <p class="pageTitle columnsText">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée de « sang placentaire »), il s’agit du sang se trouvant dans le cordon ombilical. Ce sang est particulièrement riche en <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    <p class="pageTitle TwoColumnsText">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée de « sang placentaire »), il s’agit du sang se trouvant dans le cordon ombilical. Ce sang est particulièrement riche en <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
-    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+    -  Globules blancs :ils assurent la défense du corps contre les virus et les bactéries
     <br><br> 
-    - Plaquettes : aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
-    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+    -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
     <br><br> 
-    - Plaquettes : aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
-    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+    -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
     <br><br> 
-    - Plaquettes : aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour <a href="https://www.dondesangdecordon.fr/" target="_blank" rel="noopener noreferrer">soigner des patients</a> atteints de diverses maladies du sang.
-    <br><br>
-    Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. Le don de sang placentaire est un acte <strong>indolore, gratuit, anonyme et volontaire.</strong>  
-    <br><br>
-    Celui-ci peut servir pour deux usages : thérapeutique ou scientifique.
-    <br><br>
+    - Plaquettes : elles aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour soigner des patients atteints de diverses maladies du sang.</p>
+    <p>Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. 
+    Le don de sang placentaire est un <span class="underline">acte indolore, gratuit, anonyme et volontaire</span>.
+    </p>
+
+    <p class="ThreeColumnsText">Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. 
+    Le don de sang placentaire est un <span class="underline">acte indolore, gratuit, anonyme et volontaire</span>. 
+    </p>
+
     <h2>Le don du sang de cordon à usage thérapeutique </h2>
     <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p>La plupart des maternités ne proposent pas de recueillir le sang de cordon : seules certaines maternités, agréées par le Ministère de la Santé, appartiennent au Réseau Français de Sang Placentaire et sont autorisées à prélever le sang de cordon pour un usage thérapeutique. Les dons de sang sont alors centralisés, traités et conservés en France au sein de quatre Banques de Sang Placentaire, dans l’attente de leur administration à un patient.
     <br>
@@ -166,7 +169,7 @@
         </ul>
         </p>
     </div>
-    <button class="accordion"><p class="accordionTitle">Le cordon ombilical et le placenta</p></button>
+    <button class="accordion"><p class="accordionTitle">Le cordon ombilical et/ou le placenta</p></button>
     <div class="panel">
         <img id="cordon" class="illustrationAccordeon" src={{ asset ('img/icons/cordon.svg')}}>
         <p>
@@ -174,13 +177,13 @@
         <br><br>
         <ul class="prodCordon">
             <li>les <span class="tooltip">cellules <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">souches <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, utilisées pour le développement d’approches innovantes de   <span class="tooltip">thérapie <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span> <span class="tooltip">cellulaire <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span> <span class="tooltip">régénératrice. <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span></li>
-            <li>les <span class="tooltip">cellules<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span> <span class="tooltip">endothéliales<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span>, qui servent de modèle d’étude <span class="latin">in vitro</span> de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.</li>
+            <li>les <span class="tooltip">cellules<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span> <span class="tooltip">endothéliales<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span>, qui servent de modèle d’étude <span class="latin">in vitro</span> de <span class="tooltip">néoangiogénèse <span class="tooltipText">processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs.</span></span>, de cicatrisation ou de remodelage du tissu osseux.</li>
             <li>Le placenta peut éventuellement être recueilli après son expulsion. Il est également une source de <span class="tooltip">cellules <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">souches <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>.</li>        
         </ul>
         </p>
     </div>
 
-    <h2>Schéma explicatif (cliquez pour en savoir plus) :</h2>
+    <h2>Schéma interactif :</h2>
     <div class="cardsHosto" id="schemaDon">
         <div class="card">
             <div class="card-pic">
@@ -224,8 +227,16 @@
         </div>
     </div>
     <h1>Quel usage pour ce don ?</h1>
-    <p class="columnsText">Les cellules de sang de cordon sont des cellules précieuses pour la recherche. Elles peuvent faire avancer la recherche biomédicale, notamment dans les domaines de l’infectiologie, l’immunologie, l’hématologie, l’oncologie et de la thérapie cellulaire. Elles permettent également de contribuer à la recherche pour des traitements innovants.</p>
-    <h2 id="cardsRechercheTitle">Recherches appliquées :</h2>
+    <p>Les cellules du cordon sont précieuses pour la recherche. Elles sont utilisées :
+    <ul class="listeUsage">
+        <li>en recherche fondamentale pour mieux comprendre les maladies</li>
+        <li>en recherche appliquée pour développer de nouveaux traitements</li>
+    </ul>
+    <br>
+    <p>Les domaines concernés sont notamment <span class="tooltip">l’infectiologie <span class="tooltipText">Etude des infections, qu’elles soient d’origine virale, microbienne, parasitaire ou autre</span></span>, <span class="tooltip">l’immunologie <span class="tooltipText">Etude des mécanismes des défenses immunitaires de l’organisme contre des éléments reconnus comme étant dangereux pour celui-ci (infections, cancer…)</span></span>, <span class="tooltip">l’hématologie <span class="tooltipText">Etude du sang et de ses éléments</span></span>, <span class="tooltip">l’oncologie <span class="tooltipText">Etude du cancer</span></span> et de la  <span class="tooltip">thérapie <span class="tooltipText">Utilisation de cellules de l’organisme comme medicament, soit pour aider l’organisme à se défendre  (immunothérapie cellulaire) soit pour reconstruire des tissus ou organs lésés (thérapie cellulaire régénératrice)</span></span> <span class="tooltip">cellulaire <span class="tooltipText">Utilisation de cellules de l’organisme comme medicament, soit pour aider l’organisme à se défendre  (immunothérapie cellulaire) soit pour reconstruire des tissus ou organs lésés (thérapie cellulaire régénératrice)</span></span>.</p>
+
+</p>
+    <h2 id="cardsRechercheTitle">Exemples de maladies concernées </h2>
     <div class="cardRecherche">
         <div class="card">
             <div class="card-title"><h2>Pathologies adultes :</h2></div>
