ajout page contact

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -69,7 +69,7 @@
                 </span>
                 <span>
                     <a href="#">Conditions d’utilisation</a>
-                    <a href="#">Nous contacter</a>
+                    <a href={{path ('contact')}}>Nous contacter</a>
                     <a href={{path ('faq')}}>F.A.Q</a>
                 </span>
             
