--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -118,7 +118,7 @@
         </div>
         <i class="fas fa-long-arrow-alt-right fa-4x"></i>
         <div class="devenir">
-            <img id="LogoIcon" class="icon" src={{ asset ('img/icons/laboratory.svg')}}>
+            <img class="icon" src={{ asset ('img/icons/laboratory.svg')}}>
             <h2>Cession aux laboratoires de recherche</h2>
         </div>
     </div>
