--- a/assets/styles/cardActu.scss
+++ b/assets/styles/cardActu.scss
@@ -60,12 +60,14 @@ $kaki: rgb(180, 139, 10);
             font-size: 1em;
             margin-bottom: 0.1em;
             margin-top: 0.25em;
+            color: black;
         }
         .sousTitre{
             text-align: center;
             font-weight: 500;
             font-size: 1em;
             font-weight: bold;
+            color: black;
         }
     }
 }
