--- a/templates/admin/actus/ShowActus.html.twig
+++ b/templates/admin/actus/ShowActus.html.twig
@@ -3,7 +3,9 @@
 
 {% block title %}Gestion des actualités{% endblock %}
 
-{% block stylesheets %}{% endblock %}
+{% block stylesheets %}
+    {{ encore_entry_link_tags('scss/pagination') }}
+{% endblock %}
 
 {% block body %}
     <div class="container">
